--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,8 +46,8 @@
     <p class="contact-subtitle">I'd love to hear from you. Feel free to reach out!</p>
 
     <div class="contact-info">
-      <p><strong><i class="fas fa-user"></i> Email:</strong> asrch25&#64;gmail.com</p>
-      <p><strong><i class="fa-solid fa-phone"></i> Phone:</strong> +91 9100256511</p>
+      <p><strong><i class="fas fa-user"></i> Email:-</strong> asrch25&#64;gmail.com</p>
+      <p><strong><i class="fa-solid fa-phone"></i> Phone:-</strong> +91 9100256511</p>
     </div>
 
     <form class="contact-form" (ngSubmit)="onSubmit()">
